--- a/cyclope/templates/cyclope/inline_view.html
+++ b/cyclope/templates/cyclope/inline_view.html
@@ -1,3 +1,5 @@
 {# This template wraps a view when inserted inline in a region #}
+{% load compress %}
 {% block extra_head %}{{ block.super }}{% endblock %}
+{% compress js inline %}{% block extra_head_js %}{{ block.super }}{% endblock %}{% endcompress %}
 {% block content %}{{ block.super }}{% endblock %}
