--- a/cyclope/templates/cyclope/themes/neutrona/base.html
+++ b/cyclope/templates/cyclope/themes/neutrona/base.html
@@ -27,7 +27,7 @@
     <meta name="Description" content="{{ CYCLOPE_SITE_SETTINGS.description }}" />
     <link href="/rss" title="RSS" type="application/rss+xml" rel="alternate" />
 
-    {% if not COMPRESS_ENABLED %}
+    {% if debug %}
     <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/cyclope.less" rel="stylesheet/less" type="text/css"/>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/less-1.3.0.min.js"></script>
     {% else %}
@@ -62,8 +62,11 @@
         });
     });
     </script>
+    {% block extra_head_js %}{% endblock %}
     {% endcompress %}
     {% block extra_head %}{% endblock %}
+
+
   </head>
 
   <body class="{% block body_class %}{%endblock%}">
