Removed django-compressor

--- a/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_player.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-{% block extra_head_js %}
+{% block extra_head %}
 {{ block.super }}
 <script type='text/javascript' src='/media/cyclope/jwplayer/swfobject.js'></script>
 {% endblock %}
