--- a/cyclope/templates/cyclope/site_search_box.html
+++ b/cyclope/templates/cyclope/site_search_box.html
@@ -1,7 +1,7 @@
 {% extends host_template %}
 {% load i18n %}
 
-{% block extra_head_js %}
+{% block extra_head %}
 {{ block.super }}
 <script type="text/javascript">
 $(function() {
