--- a/cyclope/core/collections/templates/collections/category_slideshow.html
+++ b/cyclope/core/collections/templates/collections/category_slideshow.html
@@ -1,8 +1,8 @@
 {% extends host_template %}
 
-{% load i18n cyclope_utils fb_versions compress %}
+{% load i18n cyclope_utils fb_versions %}
 
-{% block extra_head_js %}
+{% block extra_head %}
 <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery.jcarousel.min.js"></script>
 <script type="text/javascript">
     // jCarousel documentation http://sorgalla.com/projects/jcarousel/
@@ -37,12 +37,7 @@
       });
   });
 </script>
-{% endblock %}
-
-{% block extra_head %}
-{% compress css inline %}
 <link rel="stylesheet" type="text/css" href="{{ CYCLOPE_THEME_MEDIA_URL }}css/jcarousel.css" />
-{% endcompress %}
 {% endblock %}
 
 {% block content %}
