--- a/cyclope/templates/comments/comments_list.html
+++ b/cyclope/templates/comments/comments_list.html
@@ -1,6 +1,9 @@
 {% extends host_template %}
 {% load i18n %}
 
+{% block extra_head %}
+{% endblock %}
+
 {% block content %}
 <div class="content-view comment comments-list">
   {% include 'comments/list.html' %}
