--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -4,15 +4,18 @@
 
     <div class="pretitle-container first meta-content">
       {% if  article.pretitle and not simplified_view %}
-      <div class="pretitle">{% trans article.pretitle %}{% if article.date %}<span class="pretitle-separator"> | </span>{% endif %}</div>
+      <div class="pretitle">{% trans article.pretitle %}
+        {% if article.date %}<span class="pretitle-separator"> | </span>{% endif %}</div>
       {% endif%}
-      
+
       {% if article.date %}
       <div class="date">{{ article.date|date:'SHORT_DATE_FORMAT' }}</div>
       {% endif %}
     </div>
 
-    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" /><a href="{% url article-detail article.slug %}">{{ article.name }}</a></h2>
+    <h2 class="title"><img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" />
+      <a href="{% url article-detail article.slug %}">{{ article.name }}</a>
+    </h2>
 
     {% if article.pictures and not simplified_view %}
       <div class="teaser_icon_container"><a href="{% url article-detail article.slug %}">
@@ -26,7 +29,7 @@
       {% else %}
         {{ article|parsed_gettext:"text"|smart_style|truncatewords_html:40 }}
       {% endif %}
-      <span class="more"><a href="{% url article-detail article.slug %}"> {% trans "More" %}</a></span> 
+      <span class="more"><a href="{% url article-detail article.slug %}"> {% trans "More" %}</a></span>
     </div>
 
     {% if not simplified_view %}
@@ -41,20 +44,6 @@
 
     {% if not simplified_view %}
 
-{% comment %} TAGS ARE NOT IMPLEMENTED
-        {% if article.tags %}
-        <div class="meta-content"><h2 class="tags">
-          <span class="tags-label">{% trans "Tags" %}:</span>
-          {% tags_for_object article as article_tags %}
-          {% for tag in article_tags %}
-            <!--<a href="/tag/{{ tag.name|slugify }}" class="tag">{{tag.name}}</a>-->
-            {{tag.name}}{% if not forloop.last%},{% endif%}
-
-          {% endfor %}
-        </h2></div>
-        {% endif %}
-{% endcomment %}
     <div class="clear"></div>
     {% endif %}
-
   </div>
