--- a/cyclope/core/collections/templates/collections/category_contents_base.html
+++ b/cyclope/core/collections/templates/collections/category_contents_base.html
@@ -3,6 +3,22 @@
 {% load i18n cyclope_utils fb_versions %}
 
 {% block content %}
+
+  {% if perms.collections.add_categorization %}
+  <div class="category_add_content">
+    <a href="{% url category-default category.slug %}">Add content</a>
+    <ul class="content_types">
+      {% for c_type in category.collection.content_types.all %}
+      <li>
+        <a href="/admin/{{ c_type.app_label }}/{{ c_type.model }}/add?_frontend=1" class="add_content add_{{ c_type.model }}">
+          {{ c_type.name.capitalize }}
+        </a>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
+
   {% if view_options.navigation == "TOP" %}
     {% include 'collections/hierarchycal_navigation_block.html' %}
   {% endif %}
