frontend edit: added translation strings, initial migration and minor fixes

--- a/cyclope/core/collections/templates/collections/category_contents_base.html
+++ b/cyclope/core/collections/templates/collections/category_contents_base.html
@@ -2,13 +2,41 @@
 
 {% load i18n cyclope_utils fb_versions obj_perms %}
 
+{% block extra_head %}
+{{ block.super }}
+<script type="text/javascript">
+var hide_children = function (el){
+    $(el).children('ul').css('display', 'none');
+}
+
+var show_children = function (el){
+    $(el).children('ul').css('display', 'block');
+}
+
+jQuery(document).ready(function(){
+    $('.category_add_content').each(function(){
+        hide_children($(this));
+    });
+    $('.category_add_content').each(function(){
+        $(this).mouseenter(function(){
+            show_children($(this));
+            return false;
+        })
+        $(this).mouseleave(function(){
+            hide_children($(this));
+            return false;
+        });
+    });
+});
+</script>
+{% endblock %}
+
 {% block content %}
 
   {% per_category_perms category as cat_perms %}
   {% if cat_perms.add_content %}
-
   <div class="category_add_content">
-    <a href="{% url category-default category.slug %}">Add content</a>
+    <a href="{% url category-default category.slug %}">{% trans "Add content" %}</a>
     <ul class="content_types">
       {% for c_type in category.collection.content_types.all %}
       <li>
