--- a/cyclope/templates/admin/base_content_change_form.html
+++ b/cyclope/templates/admin/base_content_change_form.html
@@ -78,6 +78,7 @@ jQuery(document).ready(function($){
 //<![CDATA[
 
 jQuery(document).ready(function($){
+
     var current_collection = null;
 
     var select_collection = function (collection){
@@ -102,7 +103,12 @@ jQuery(document).ready(function($){
         $('#id_collections-tab-'+ collection).addClass('current-tab');
     }
 
+    {% if initial_collection %} {# this is set when accessing from the frontend #}
+    var initial = {{ initial_collection }};
+    {% else %}
     var initial = $("select[id^='id_collections-categorization-content_type-object_id-'][id$='-collection']").val();
+    {% endif %}
+
     $('#collections-categorization-content_type-object_id-group h2').after('<div id="collection-tabs-container"><ul id="collection-tabs-list"></ul></div>');
 
     $('#id_collections-categorization-content_type-object_id-__prefix__-collection option')
