--- a/cyclope/templates/admin/change_form.html
+++ b/cyclope/templates/admin/change_form.html
@@ -8,11 +8,16 @@
 {{ media }}
 <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/reuse_django_jquery.js"></script>
 <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery.chainedSelect.js"></script>
+<script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/less-1.3.0.min.js"></script> 
 {% endblock %}
 
 {% block extrastyle %}
 {{ block.super }}
 <link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />
+{% if frontend_admin %}
+<link href="{{ CYCLOPE_STATIC_URL }}css/frontend_edit.css" rel="stylesheet" type="text/css"/>
+<link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/frontend_edit.less" rel="stylesheet/less" type="text/css"/>
+{% endif %}
 {% endblock %}
 
 {% block coltype %}{% if ordered_objects %}colMS{% else %}colM{% endif %}{% endblock %}
