--- a/cyclope/media/themes/neutrona/css/cyclope.less
+++ b/cyclope/media/themes/neutrona/css/cyclope.less
@@ -1,12 +1,13 @@
 /*
-# Cyclope 3 Workflow Design
+# Cyclope3 Neutrona Workflow Design
 # Theme: Neutrona 
 # Layout: 5 Elements
 # Development: CodigoSur www.codigosur.org
-# 960 Grid System Based www.960.gs
 # Official web site Cyclope3 GPL: http://cyclope.codigosur.org
 # Official Trac Cyclope3 GPL: http://codigo.cyclope.ws
-# Copyright 2010-2012 Codigo Sur - Sociedad Civil
+# Less CSS based www.lesscss.org
+# 960 Grid System Based www.960.gs
+# Copyright 2010-2012 Codigo Sur Sociedad Civil
 # All rights reserved.
 # This file is part of Cyclope 3.
 # Cyclope is free software: you can redistribute it and/or modify
@@ -15,11 +16,12 @@
 # (at your option) any later version.
 */
 @import "grid.less";
-@import "colors.less";
+@import "colours.less";
 @import "defaults.less";
 @import "style.less";
 @import "air.less";
 @import "water.less";
 @import "love.less";
+@import "jcarousel.less";
 @import "fire.less";
 @import "earth.less";
