--- a/cyclope/core/collections/templates/collections/category_slideshow.html
+++ b/cyclope/core/collections/templates/collections/category_slideshow.html
@@ -37,7 +37,7 @@
       });
   });
 </script>
-<link rel="stylesheet" type="text/css" href="{{ CYCLOPE_THEME_MEDIA_URL }}css/jcarousel.css" />
+<link rel="stylesheet" type="text/css" href="{{ CYCLOPE_THEME_MEDIA_URL }}css/jcarousel.less" />
 {% endblock %}
 
 {% block content %}
