Change name Neutrona Theme to Neutronix

--- a/cyclope/templates/cyclope/themes/neutronix/base.html
+++ b/cyclope/templates/cyclope/themes/neutronix/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 # Cyclope 3 Workflow Design
-# Theme: Neutrona
+# Theme: Neutronix
 # Layout: 5 Elements
 # 960 Grid System Based www.960.gs
 # Official Trac Cyclope 3 GPL: http://codigo.cyclope.ws
