--- a/cyclope/media/themes/neutronix/css/air.less
+++ b/cyclope/media/themes/neutronix/css/air.less
@@ -4,7 +4,7 @@
 # Layout: 5 Elements
 # 960 Grid System Based www.960.gs
 # Official Trac Cyclope 3 GPL: http://codigo.cyclope.ws
-# Copyright 2010-2012 Codigo Sur - Sociedad Civil
+# Copyright 2010-2012 Codigo Sur Sociedad Civil
 # All rights reserved.
 # This file is part of Cyclope 3.
 # Cyclope is free software: you can redistribute it and/or modify
