New proposal for html files

--- a/cyclope/templates/cyclope/themes/neutronix/five_elements.html
+++ b/cyclope/templates/cyclope/themes/neutronix/five_elements.html
@@ -7,9 +7,9 @@
 {% block page_content %}
 <div class="grid_14">
 <div id="fire">
-    {% region 'before_fire' %}
+    {% region 'spark' %}
     {% block content %}{% endblock %}
-    {% region 'after_fire' %}
+    {% region 'ash' %}
 </div>
 </div>
 
