--- a/cyclope/templates/cyclope/themes/neutronix/four_elements.html
+++ b/cyclope/templates/cyclope/themes/neutronix/four_elements.html
@@ -7,11 +7,11 @@
 {% block page_content %}
 <div class="grid_19">
 <div id="fire">
-  {% region 'before_fire' %}
+  {% region 'spark' %}
   <div class="content_fire">
   {% block content %} {% endblock %}
   </div>
-  {% region 'after_fire' %}
+  {% region 'ash' %}
 </div>
 </div>
 
