--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
@@ -12,9 +12,7 @@
        <h3 class="html-content summary">{{ movieclip.description|smart_style }}</h3>
      {% endif %}
 
-     {% if movieclip.author %}
-       <div class="meta-content author_container"><h4 class="author">{% trans "By" %} {{ movieclip.author }}</h4></div>
-     {% endif %}
+     {% include "cyclope/author_block.html" with author=movieclip.author %}
 
      {% if movieclip.tags %}
          <div class="meta-content"><span class="tags">
