--- a/cyclope/apps/medialibrary/templates/medialibrary/picture_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/picture_teaser.html
@@ -12,9 +12,7 @@
        <h3 class="html-content summary">{{ picture.description|smart_style }}</h3>
      {% endif %}
 
-     {% if picture.author %}
-       <div class="meta-content author_container"><h4 class="author">{% trans "By" %} {{ picture.author }}</h4></div>
-     {% endif %}
+     {% include "cyclope/author_block.html" with author=picture.author %}
 
      {% if picture.tags %}
         <div class="meta-content"><span class="tags">
