--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_teaser.html
@@ -12,9 +12,7 @@
       <h3 class="html-content summary">{{ regularfile.description|smart_style }}</h3>
     {% endif %}
 
-    {% if regularfile.author %}
-      <div class="meta-content author_container"><h4 class="author">{% trans "By" %} {{ regularfile.author }}</h4></div>
-    {% endif %}
+    {% include "cyclope/author_block.html" with author=regularfile.author %}
 
     {% if regularfile.image %}
       <br class="floating-img-clear" />
